deploy/kubernetes/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leadrecovery-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
